# rust_training

./: InstructorNotes.md  InstructorNotesDay3.md  InstructorNotesDay4.md  InstructorNotesDay5.md  InstructorNotesDay6.md  README.md  outline.md
bulls_and_cows/src/: main.rs
calc/src/: lib.rs
chat/: Cargo.toml
chat/src/: main.rs
datafile/: Cargo.toml
datafile/src/: main.rs
fizzbuzz/src/: main.rs
leveldb/: Cargo.toml
leveldb/src/: lib.rs
