[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
tokio-util = "0.7.0"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
